--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_bloc: ^8.0.0
   geolocator: ^8.0.1
   permission_handler: ^8.3.0
+  google_polyline_algorithm: ^3.1.0
 
 dev_dependencies:
   dio: ^4.0.4
